# melee-inject

./: Cargo.toml  README.md  transform.dot  transformation-example.txt
examples/: transform.rs
melee_inject/: Cargo.toml  README.md
melee_inject/examples/: transform.rs
melee_inject/src/: lib.rs
melee_inject/src/snapshots/: melee_dat__tests__check_dat_headers.snap  melee_dat__tests__find_dat_files.snap  melee_dat__tests__find_yoshi_header.snap  melee_dat__tests__fst.snap  melee_dat__tests__new_fst.snap.new
melee_inject_codegen/: Cargo.toml
melee_inject_codegen/src/: main.rs
src/: lib.rs  main.rs
src/snapshots/: melee_dat__tests__find_yoshi.snap  melee_dat__tests__find_yoshi_header.snap  melee_dat__tests__load_files.snap
tests/: replace.rs
