[package]
name = "melee_inject"
version = "0.1.0"
edition = "2021"

[lib]
name = "melee_inject"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc-gcm = "0.10"
insta = "1.14.0"
binrw = "0.8"
clap = { version = "3.1", features = ["derive"] }
